--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,5 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
@@ -24,15 +10,28 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.App-table {
+  width: 70%;
+  text-align: center;
+  border-collapse: collapse;
+  border-spacing: 0;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.App-table tr:nth-child(2n+1) {
+  background: hsl(207, 15%, 20%);
+}
+.App-table th {
+ padding: 10px;
+ background: #778ca3;
+ border-right: solid 1px #778ca3;
+ color: #ffffff;
+}
+.App-table th:last-child {
+  border-right: none;
+}
+.App-table td {
+  padding: 10px;
+  border-right: solid 1px #778ca3; 
+}
+.App-table td:last-child {
+  border-right: none;
 }
