--- a/src/App.css
+++ b/src/App.css
@@ -1,37 +1,45 @@
 .App {
   text-align: center;
-  background-color: #282c34;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  font-size: calc(10px + 0.5vmin);
+  color: #434343;
+  padding-top: 5px;
+  padding-bottom: 5px;
 }
 
 .App-table {
-  width: 70%;
-  text-align: center;
+  width: 50%;
   border-collapse: collapse;
   border-spacing: 0;
+  border: 1px solid;
 }
-.App-table tr:nth-child(2n+1) {
-  background: hsl(207, 15%, 20%);
-}
+
 .App-table th {
- padding: 10px;
- background: #778ca3;
- border-right: solid 1px #778ca3;
- color: #ffffff;
+  padding: 10px;
+  background: #356854;
+  color: #fff;
+  border: 1px solid;
+  text-align: center;
+}
+.App-table th:first-child {
+  border-left: none;
 }
 .App-table th:last-child {
   border-right: none;
 }
-.App-table td {
-  padding: 10px;
-  border-right: solid 1px #778ca3; 
+
+.App-table tr {
+  text-align: right;
 }
-.App-table td:last-child {
-  border-right: none;
+.App-table tr:nth-child(2n+1) {
+  background: #f6f8f9;
+}
+
+.App-table td {
+  border: 1px solid;
+  padding: 5px;
 }
