--- a/src/App.css
+++ b/src/App.css
@@ -11,35 +11,97 @@
   padding-bottom: 5px;
 }
 
+.App-input-checkbox[type="checkbox"]{
+  width:  16px;
+  height: 16px;
+}
+
 .App-table {
-  width: 50%;
+  width: 70vw;
   border-collapse: collapse;
   border-spacing: 0;
   border: 1px solid;
+  margin: 5px;
+  
+  th {
+    padding : 10px;
+    background: #356854;
+    color: #fff;
+    border: 1px solid;
+    text-align: center;  
+  };
+  th:first-child {
+    border-left: none;
+  };
+  th:last-child {
+    border-right: none;
+  };
+
+  tr {
+    text-align: right;
+  };
+  tr:nth-child(2n+1) {
+    background: #f6f8f9;
+  };
+
+  td {
+    width: 25%;
+    border: 1px solid;
+    padding: 5px;
+  };
 }
 
-.App-table th {
-  padding: 10px;
-  background: #356854;
-  color: #fff;
+.App-table-select{
+  width: 30vw;
+  border-collapse: collapse;
+  border-spacing: 0;
   border: 1px solid;
-  text-align: center;
-}
-.App-table th:first-child {
-  border-left: none;
-}
-.App-table th:last-child {
-  border-right: none;
+  margin: 5px;
+  
+  th {
+    padding : 10px;
+    background: #c9daf8;
+    color: black;
+    border: 1px solid;
+    text-align: center;  
+  };
+  th:first-child {
+    border-left: none;
+  };
+  th:last-child {
+    border-right: none;
+  };
+
+  tr {
+    text-align: right;
+  };
+  tr:nth-child(2n+1) {
+    background: #f6f8f9;
+  };
+
+  td {
+    width: 25%;
+    border: 1px solid;
+    padding: 5px;
+  };
 }
 
-.App-table tr {
-  text-align: right;
+.App-table-td-rank{
+  background-color: #cccccc;
+  color: black;
 }
-.App-table tr:nth-child(2n+1) {
-  background: #f6f8f9;
+.App-table-td-level{
+  background-color: #b4a7d6;
+  color: black;
 }
 
-.App-table td {
-  border: 1px solid;
-  padding: 5px;
+/* -- テーブル行の背景変更用 -- */
+.App-CollectGreen{
+  background-color: #b7e1cd;
+}
+.App-CollectRed{
+  background-color: #ea9999;
+}
+.App-None{
+  background-color: #d9d9d9;
 }
