--- a/src/App.css
+++ b/src/App.css
@@ -95,6 +95,28 @@
   color: black;
 }
 
+.App-button{
+    /* 👇デフォルトのスタイルを解除 */
+    -moz-appearance: none;
+    -webkit-appearance: none;
+    appearance: none;
+    /* 👇スタイル */
+    display: inline-block;
+    width: 100%; /* 幅 */
+    max-width: 250px; /* 最大幅 */
+    margin: 1em 0; /* 前後の余白 */
+    padding: 0.6em 1.5em 0.6em 0.5em; /* 文字周りの余白 */
+    cursor: pointer; /* カーソルを指に */
+    line-height: 1.4; /* 行高 */
+    font-size: 0.95em; /* フォントサイズ */
+    font-weight: 700; /* 太字に */
+    color: #333; /* 文字色 */
+    border-radius: 4px; /* 角丸 */
+    background-color: #cfe2f3; /* 背景色 */
+    border: solid 1px #cfe2f3; /* 枠線 */
+    box-shadow: 0 3px 3px -2px rgba(3, 29, 41, 0.15); /* 影 */  
+}
+
 .App-select{
   /* 👇デフォルトのスタイルを解除 */
   -moz-appearance: none;
