--- a/src/App.css
+++ b/src/App.css
@@ -52,7 +52,8 @@
 }
 
 .App-table-select{
-  width: 30vw;
+  width: 100%;
+  max-width: 400px;
   border-collapse: collapse;
   border-spacing: 0;
   border: 1px solid;
